fix navbar going under scrollbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,9 +6,8 @@ nav {
   z-index: 50;
   position: fixed;
   background-color: black;
-  width: 100vw;
+  width: 100%;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 6px;
-  /* transform-style: preserve-3d; */
 }
 
 nav h2 {
